--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,13 @@
     padding: 0.75em 16px 0;
     border-top: 1px solid #dfe2e2;
   }
+  #home #content div .item-img {
+    display: inline;
+  }
+  #home #content div .item-description {
+    margin-top: 0;
+    padding-top: 0;
+  }
   #home #intro {
     margin-bottom: 1.5em;
   }
